--- a/static/index.html
+++ b/static/index.html
@@ -261,6 +261,22 @@
           </select>
         </div>
 
+        <div class="option-group">
+          <label>🔬 LangExtract 구조화 추출</label>
+          <div style="display:flex; gap:8px; align-items:center;">
+            <input type="checkbox" id="useLangExtract" style="width:auto;">
+            <select id="extractProfile" style="flex:1;">
+              <option value="general">일반</option>
+              <option value="meeting">회의록</option>
+              <option value="tech_review">기술 리뷰</option>
+              <option value="research">리서치</option>
+            </select>
+          </div>
+          <div style="font-size:0.75em; color:var(--text2); margin-top:4px;">
+            텍스트에서 핵심 엔티티를 먼저 추출 후 LLM 정리
+          </div>
+        </div>
+
         <div class="btn-group">
           <button class="btn btn-primary" onclick="processAll()" id="processBtn" style="flex:1;">
             🚀 생성하기
@@ -437,10 +453,13 @@
         const format = document.getElementById('formatSelect').value;
 
         setStatus('loading', '🤖 LLM 처리 중...');
+        const useLangExtract = document.getElementById('useLangExtract').checked;
+        const extractProfile = document.getElementById('extractProfile').value;
+
         const resp = await fetch('/api/process', {
           method: 'POST',
           headers: {'Content-Type': 'application/json'},
-          body: JSON.stringify({sources, template, format}),
+          body: JSON.stringify({sources, template, format, use_langextract: useLangExtract, extraction_profile: extractProfile}),
         });
 
         const data = await resp.json();
